<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFFAEB"
    tools:context=".UserDetails">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/enriqueta"
        android:text="@string/name"
        android:textColor="#3E5724"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/edittext_bg"
        android:drawableLeft="@drawable/person"
        android:drawablePadding="5dp"
        android:filterTouchesWhenObscured="false"
        android:hint="@string/muskan_goel"
        android:inputType="textPersonName|textCapWords"
        android:paddingStart="5dp"
        android:paddingLeft="5dp"
        android:paddingTop="2dp"
        android:paddingEnd="5dp"
        android:paddingRight="5dp"
        android:paddingBottom="2dp"
        android:text=""
        android:textColor="#201F1F"
        android:textColorHint="#BFBDBD"
        android:textColorLink="#FFFFFF"
        android:textCursorDrawable="@color/app_color"
        android:textSize="16sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/enriqueta"
        android:text="@string/email_address"
        android:textStyle="bold"
        android:textColor="#3E5724"
        android:textAllCaps="true"
        android:textSize="16sp" />


    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/edittext_bg"
        android:drawableLeft="@drawable/ic_baseline_email_24"
        android:drawablePadding="5dp"
        android:hint="@string/muskangoel_gmail_com"
        android:inputType="textEmailAddress"
        android:paddingStart="5dp"
        android:paddingLeft="5dp"
        android:paddingTop="2dp"
        android:paddingEnd="5dp"
        android:paddingRight="5dp"
        android:paddingBottom="2dp"
        android:text=""
        android:textColor="#201F1F"
        android:textColorHint="#BFBDBD"
        android:textCursorDrawable="@color/app_color"
        android:textSize="16sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="30dp"
        android:textColor="#3E5724"
        android:fontFamily="@font/enriqueta"
        android:text="@string/phone_number"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/edittext_bg"
        android:drawableLeft="@drawable/phone"
        android:drawablePadding="5dp"
        android:hint="@string/_9422157897"
        android:inputType="phone"
        android:maxLength="10"
        android:paddingStart="5dp"
        android:paddingLeft="5dp"
        android:paddingTop="2dp"
        android:paddingEnd="5dp"
        android:paddingRight="5dp"
        android:paddingBottom="2dp"
        android:text=""
        android:textColor="#201F1F"
        android:textColorHint="#BFBDBD"
        android:textCursorDrawable="@color/app_color"
        android:textSize="16sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/enriqueta"
        android:text="@string/amount"
        android:textColor="#3E5724"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/amount"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/edittext_bg"
        android:drawableLeft="@drawable/ic_baseline_attach_money_24"
        android:drawablePadding="5dp"
        android:hint="@string/_500"
        android:inputType="number"
        android:paddingStart="5dp"
        android:paddingLeft="5dp"
        android:paddingTop="2dp"
        android:paddingEnd="5dp"
        android:paddingRight="5dp"
        android:paddingBottom="2dp"
        android:text=""
        android:textColor="#201F1F"
        android:textColorHint="#BFBDBD"
        android:textCursorDrawable="@color/app_color"
        android:textSize="16sp" />

    <Button
        android:id="@+id/payment"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:textColor="#FAF4C4"
        android:textSize="16sp"
        android:drawableRight="@drawable/ic_baseline_arrow_forward_ios_24"
        android:text="@string/pay_now"
        app:backgroundTint="#9A1D47" />

</LinearLayout>